--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,13 @@ h1 {
 
 p {
   font-family: 'Open Sans';
+  font-size: 13px;
   line-height: 1.5;
   text-align: center;
 }
 
 .text {
-  width: 65%;
+  width: 70%;
   margin: auto;
 }
 
