--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ h1 {
 
 p {
   font-family: 'Open Sans';
+  font-size: 13px;
   line-height: 1.5;
   text-align: center;
 }
@@ -101,7 +102,7 @@ footer {
 
   main {
     flex-direction: row;
-    gap: 4rem;
+    gap: 2rem;
     padding: 0 2rem;
   }
 
@@ -118,6 +119,7 @@ footer {
 
   p {
     text-align: left;
+    font-size: 14px;
   }
 
   hero {
